# poc-mobile-python

./: .gitignore  README.md  android.txt  app.kv  buildozer.spec  main.kv  main.py  main_layout.kv  pyproject.toml  requirements-ios.txt  requirements-linux-ubuntu.txt  requirements.in  requirements.txt
docs/: build_ios.md
experiments/: Kivy-base64-image-example.py  base64-example.txt  parse-datauri-scheme.py  stability-api-example.curl  stability-api-example.js  stability-api-example.py  stability-api-response-example.json
libs/: main_app.kv  main_app.py
libs/assets/: app.json
libs/features/about/: about_screen.kv  about_screen.py
libs/features/ai_chat/: ai_chat_screen.kv  ai_chat_screen.py  chat_gpt_service.py
libs/features/ai_text_to_img/: image_creator_service.py  text2img_screen.kv  text2img_screen.py  text2img_service.py
libs/features/home/: chat_gpt_service.py  home_screen.kv  home_screen.py
libs/features/settings/: preferences_service.py  (+2 more)
libs/services/: storage_service.py
libs/theme/: app_data_table.py  app_navigation_bar.py  base_screen.kv  base_screen.py  theme.kv  theme.py  theme_utils.py
libs/utils/: app_utils.py  chat_gpt_service.py  date_utils.py  keyboard_utils.py  platform_utils.py  preferences_service.py  screen_utils.py  storage_service.py  string_utils.py
scripts/certificates/: install_certifi.py
scripts/icons/: main.py
stores_presence/logos/: 2890569_ai_artificial intelligence_automaton_brain_electronics_icon.ai  2890569_ai_artificial intelligence_automaton_brain_electronics_icon.icns
utils/icons/: requirements-list.js
(+11 files in other folders)
